--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 var app = new Vue({
   el: '#app',
   data: {
-    message: 'Hello Vue.js!'
+    message: 'Hello w!'
   },
   mounted: function() {
     if (window.$agent) $agent.response(this.message);
