--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <p>{{ message }}</p>
   <button v-on:click="reverseMessage">Reverse Message</button>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://unpkg.com/petite-vue"></script>
 <script>
 /*************************************
 
