--- a/index.html
+++ b/index.html
@@ -1,44 +1,26 @@
 <html>
-<div id="app">
-  <p>{{ message }}</p>
-  <button v-on:click="reverseMessage">Reverse Message</button>
-</div>
-<script src="https://unpkg.com/petite-vue" defer init></script>
-<script>
-/*************************************
+<script type="module">
+  import { createApp } from 'https://unpkg.com/petite-vue?module'
 
-  With Jasonette agents,
-  you can even bring your existing
-  web app and just let it trigger
-  Jasonette core using $agent.
-  Here, we've just taken an existing
-  Vue.js sample app and added
-  $agent.response() lines, so that
-  they can talk to Jasonette when
-  they need to.
-
-  First try opening this in your
-  browser. It should work, since
-  it's just a web app.
-
-  Then, try plugging this into Jasonette
-  as an agent under $jason.head.agents.
-
-*************************************/
-var app = new Vue({
-  el: '#app',
-  data: {
-    message: 'Hello w!'
-  },
-  mounted: function() {
-    if (window.$agent) $agent.response(this.message);
-  },
-  methods: {
-    reverseMessage: function () {
-      this.message = this.message.split('').reverse().join('')
-      if (window.$agent) $agent.response(this.message)
+   if (window.$agent) $agent.response(
+  createApp({
+    // exposed to all expressions
+    count: 0,
+    // getters
+    get plusOne() {
+      return this.count + 1
+    },
+    // methods
+    increment() {
+      this.count++
     }
-  }
-})
+  }).mount())
 </script>
+
+<!-- v-scope value can be omitted -->
+<div v-scope>
+  <p>{{ count }}</p>
+  <p>{{ plusOne }}</p>
+  <button @click="increment">increment</button>
+</div>
 </html>
