--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<div id="app">
+<div id='app'>
+  <h1>Trying out Vue.js</h1>
   <p>{{ message }}</p>
   <button v-on:click="reverseMessage">Reverse Message</button>
 </div>
@@ -25,20 +26,20 @@
   as an agent under $jason.head.agents.
 
 *************************************/
-var app = new Vue({
-  el: '#app',
-  data: {
-    message: 'Hello Vue.js!'
-  },
-  mounted: function() {
-    if (window.$agent) $agent.response(this.message);
-  },
-  methods: {
-    reverseMessage: function () {
-      this.message = this.message.split('').reverse().join('')
-      if (window.$agent) $agent.response(this.message)
+  new Vue({
+    el: '#app',
+    data: {
+      message: "Hello w!"
+    },
+    mounted: function() {
+      if (window.$agent) $agent.response(this.message);
+    },
+    methods: {
+      reverseMessage: function() {
+        this.message = this.message.split('').reverse().join('')
+        if (window.$agent) $agent.response(this.message)
+      }
     }
-  }
-})
+  })
 </script>
 </html>
