--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <div id='app'>
   <h1>Trying out Vue.js</h1>
   <p>{{ message }}</p>
-  <button v-on:click="reverseMessage">Reverse Message</button>
+  <button @click="reverseMessage">Reverse Message</button>
 </div>
-<script src="https://unpkg.com/vue@next"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  
 <script>
 /*************************************
 
@@ -26,20 +28,21 @@
   as an agent under $jason.head.agents.
 
 *************************************/
-  new Vue({
-    el: '#app',
-    data: {
-      message: "Hello w!"
-    },
-    mounted: function() {
-      if (window.$agent) $agent.response(this.message);
-    },
-    methods: {
-      reverseMessage: function() {
-        this.message = this.message.split('').reverse().join('')
-        if (window.$agent) $agent.response(this.message)
-      }
+var app = new Vue({
+  el: '#app',
+  data: {
+    message: 'Hello Vue.js!'
+  },
+  mounted: function() {
+    if (window.$agent) $agent.response(this.message);
+  },
+  methods: {
+    reverseMessage: function () {
+      this.message = this.message.split('').reverse().join('')
+      if (window.$agent) $agent.response(this.message)
     }
-  })
+  }
+})
 </script>
 </html>
+
